[package]
name = "rombok_macro"
version = "0.2.0"
edition = "2021"
license = "MIT"
authors = ["myyrakle <sssang97@naver.com>"] 
description = "macro for rombok libary"
keywords = ["lombok", "getter", "setter", "builder", "java"] 
readme = "./../README.md"
repository = "https://github.com/myyrakle/rombok" 
documentation = "https://docs.rs/rombok/latest/rombok" 
homepage = "https://github.com/myyrakle/rombok/blob/master/README.md"  

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[lib]
proc-macro=true
